--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,9 @@
-TRUST_WALLET=0x9743f6B009A0F701746C586EeDC401E8bF818069
-OWNER_EMAIL=keithsampl20.com
-NODE_ENV=production
+# Payment Receiver Setup
+PAYMENT_RECEIVER_EMAIL=exoticaecosystem@gmail.com
+RECEIVER_WALLET_ADDRESS=0x66EE33486e01C1995586c30d79F0d6354858ddA5
+VENMO_DEBIT_CARD=5143772059126483
+
+# Optional Flags
+USE_EMAIL_NOTIFICATIONS=true
+ENABLE_PAYMENT_LOGGING=true
+DEFAULT_CURRENCY=EX$
